<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="title_activity_login">SNYPIX</string>
    <string name="title_activity_top_media">SNYPIX</string>
    <string name="signupText">Dont have an account? SIGNUP here.</string>
    <string name="baseServerUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/rest</string>
    <string name="baseThumbnailUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/thumbnail</string>
    <string name="basePreviewUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/preview</string>
    <string name="baseUploadUrl">http://jcla3ndtozbxyghx.myfritz.net:18789/socialalert-app/upload</string>

    <integer name="connectionTimeoutMillis">5000</integer>
    <integer name="readTimeoutMillis">10000</integer>
    <integer name="mediaPageSize">21</integer>
    <integer name="mediaMaxAge">3560</integer>
    <integer name="mediaMaxThumbnails">99</integer>

    <string name="uploadContentTitle">Upload Media</string>
    <string name="uploadContentProgress">Upload in progress</string>
    <string name="uploadContentPending">Upload pending</string>
    <string name="uploadContentFailed">Upload failed</string>
    <string name="uploadContentBlocked">Waiting user input</string>
    <string name="uploadContentCompleted">Upload completed</string>
    
    <string name="loginText">Login</string>
    <string name="emailHint">email</string>
    <string name="passwordHint">password</string>
    <string name="forgetPasswordText">Forget password?</string>
    <string name="loadingDataMessage">Loading please wait.....</string>
    <string name="unknownErrorMessage">An unknown error occurred!</string>
    <string name="titleHint">Title</string>
    <string name="tagsHint">Tags</string>
    <string name="descriptionHint">Description</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="hello_world">Hello World</string>
    <string name="title_activity_fragment">Top pictures</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_picture_category">PictureCategoryActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
</resources>