<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bravson.socialalert.android.PostMediaActivity">

    <fragment
        android:id="@+id/mediaFrame"
        android:name="com.bravson.socialalert.android.MediaFrameFragment_"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleHint"
        android:ems="10" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/tagsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tagsHint"
        android:ems="10" >
    </EditText>

    <EditText
        android:id="@+id/descirptionView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:hint="@string/descriptionHint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/publishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Publish" />
    
</LinearLayout>